issues met goedkeuren en afkeuren gefixt en feature tests gefixt
