# BackendGeoprofs/routes/api.php
@@ -15,10 +15,8 @@ Route::middleware('auth:sanctum')->group(function () {
     // Verlofaanvraag routes
     Route::prefix('user/{user}')->group(function () {
         Route::apiResource('verlofaanvraag', VerlofAanvraagController::class);
-        Route::put('verlofaanvraag/{verlofaanvraag}/reject', [VerlofAanvraagController::class, 'reject'])
-            ->name('user.verlofaanvraag.reject');
-        Route::put('verlofaanvraag/{verlofaanvraag}/approve', [VerlofAanvraagController::class, 'approve'])
-            ->name('user.verlofaanvraag.approve');
+        Route::put('/verlofaanvraag/{verlofAanvraag}/reject', [VerlofAanvraagController::class, 'reject']);
+        Route::put('/verlofaanvraag/{verlofAanvraag}/approve', [VerlofAanvraagController::class, 'approve']);
     });
 });
 
