# BackendGeoprofs/storage/api-docs/api-docs.json
@@ -228,13 +228,13 @@
                 ]
             }
         },
-        "/user/{user}/verlofaanvraag/{verlofaanvraag}": {
+        "/user/{user}/verlofaanvraag/{verlofAanvraag}": {
             "get": {
                 "tags": [
                     "Verlofaanvraag"
                 ],
                 "summary": "Get a specific verlofaanvraag of a user",
-                "operationId": "24f2972b78de6a372a6e2017a8bd6c24",
+                "operationId": "f0412cab4c9169843b51dde161ffe154",
                 "parameters": [
                     {
                         "name": "user",
@@ -247,7 +247,7 @@
                         }
                     },
                     {
-                        "name": "verlofaanvraag",
+                        "name": "verlofAanvraag",
                         "in": "path",
                         "description": "ID of the verlofaanvraag",
                         "required": true,
@@ -272,13 +272,13 @@
                 ]
             }
         },
-        "/user/{user}/verlofaanvraag/{verlofaanvraag}/approve": {
+        "/user/{user}/verlofaanvraag/{verlofAanvraag}/approve": {
             "put": {
                 "tags": [
                     "Verlofaanvraag"
                 ],
                 "summary": "Approve a verlofaanvraag (admin only)",
-                "operationId": "3fcf8a1ab67e6daff412de65d65932fa",
+                "operationId": "084a95457d86e7ae153ef8e1a1533ecb",
                 "parameters": [
                     {
                         "name": "user",
@@ -290,7 +290,7 @@
                         }
                     },
                     {
-                        "name": "verlofaanvraag",
+                        "name": "verlofAanvraag",
                         "in": "path",
                         "required": true,
                         "schema": {
@@ -311,7 +311,7 @@
                                 "properties": {
                                     "status": {
                                         "type": "string",
-                                        "example": "Goedgekeurd"
+                                        "example": "goedgekeurd"
                                     }
                                 },
                                 "type": "object"
@@ -334,13 +334,13 @@
                 ]
             }
         },
-        "/user/{user}/verlofaanvraag/{verlofaanvraag}/reject": {
+        "/user/{user}/verlofaanvraag/{verlofAanvraag}/reject": {
             "put": {
                 "tags": [
                     "Verlofaanvraag"
                 ],
                 "summary": "Reject a verlofaanvraag (admin only)",
-                "operationId": "eb53ad0d053dd6ec4282b7a8937896c8",
+                "operationId": "979f26992037ea80cf5feda4264fcb0a",
                 "parameters": [
                     {
                         "name": "user",
@@ -352,7 +352,7 @@
                         }
                     },
                     {
-                        "name": "verlofaanvraag",
+                        "name": "verlofAanvraag",
                         "in": "path",
                         "required": true,
                         "schema": {
@@ -374,7 +374,7 @@
                                 "properties": {
                                     "status": {
                                         "type": "string",
-                                        "example": "Afgekeurd"
+                                        "example": "afgekeurd"
                                     },
                                     "afkeuringsreden": {
                                         "type": "string",
